# SIRS

./: README.md
Guardian/: settings.gradle
Guardian/app/: build.gradle  google-services.json
Guardian/app/src/main/: AndroidManifest.xml
Guardian/app/src/main/res/layout/: activity_main.xml  activity_menu.xml
Guardian/app/src/main/res/values/: strings.xml  styles.xml
Guardian/gradle/wrapper/: gradle-wrapper.properties
SpyKid/: build.gradle  public_key.pem  settings.gradle
SpyKid/child/: build.gradle
SpyKid/child/src/main/: AndroidManifest.xml
SpyKid/child/src/main/res/layout/: activity_beacon.xml  activity_child.xml  activity_main.xml  activity_menu.xml  activity_qr.xml
SpyKid/child/src/main/res/values/: strings.xml
SpyKid/gradle/wrapper/: gradle-wrapper.properties
SpyKid/guardian/: build.gradle  google-services.json
SpyKid/guardian/src/debug/res/values/: google_maps_api.xml
SpyKid/guardian/src/main/: AndroidManifest.xml
SpyKid/guardian/src/main/res/layout/: activity_main.xml  (+4 more)
SpyKid/util/: build.gradle
SpyKid/util/src/main/: AndroidManifest.xml
docs/: index.html
proposal/: Report.tex  diagram.tex
report/: .gitignore  bibliography.bib  diagram.tex  main.tex
server/: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  setup.sh
server/migrations/2019-11-05-134803_base/: down.sql  up.sql
server/src/: crypto.rs  error.rs  gen_rsa.rs  init_protocol.rs  main.rs  model.rs  schema.rs
server/src/model/: child.rs  guardian.rs  location.rs
server/test_scripts/: create_child.sh  create_guardian.sh  get_location.sh  list_children.sh  update_location.sh
slides/: makefile  presentation.md
(+49 files in other folders)
