[package]
name = "server"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
diesel = { version = "1.0.0", features=["postgres"] }
dotenv = "0.9.x"
