[package]
name = "server"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
diesel = { version = "1.0.0", features=["postgres"] }
dotenv = "0.9.x"
rand = "*"
openssl = { version = "0.10", features = ["vendored"] }
once_cell = "*"
x25519-dalek = "*"
base64 = "*"
either = "*"

[[bin]]
name = "gen_rsa"
path = "src/gen_rsa.rs"

[[bin]]
name = "main"
path = "src/main.rs"
